Neue Aufgaben hinzugefügt

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_executable(aufgabe1_3 aufgabe1_3.cpp)
+add_executable(aufgabe1_8 aufgabe1_8.cpp)
+add_executable(aufgabe1_9 aufgabe1_9.cpp)
+add_executable(aufgabe1_10 aufgabe1_10.cpp)
