--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,3 +2,9 @@ add_executable(aufgabe1_3 aufgabe1_3.cpp)
 add_executable(aufgabe1_8 aufgabe1_8.cpp)
 add_executable(aufgabe1_9 aufgabe1_9.cpp)
 add_executable(aufgabe1_10 aufgabe1_10.cpp)
+add_executable(aufgabe1_11 aufgabe1_11.cpp)
+add_executable(aufgabe1_12 aufgabe1_12.cpp)
+add_executable(aufgabe1_13 aufgabe1_13.cpp)
+add_executable(aufgabe1_14 aufgabe1_14.cpp)
+add_executable(aufgabe1_15 aufgabe1_15.cpp)
+
